# FinAnalyzer

./: .coverage  .env  .flake8  README.md  pyproject.toml
data/reports/: spending_by_category_20241227_183828.csv  spending_by_weekday_20241227_183828.csv  spending_by_workday_20241227_183828.csv
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
